--- a/grouppaper.tex
+++ b/grouppaper.tex
@@ -77,7 +77,6 @@ Our paper is \textit{Time-Work Tradeoffs for Parallel Algorithms}, \textit{Spenc
 \item Single Source Shortest Path
 \end{itemize}
 
-Rather than using a matrix based approach, Spencer utilizes a new data structure called \textit{nearby lists} that serves as the work horse for the subsequent algorithms. \\
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -86,7 +85,7 @@ Rather than using a matrix based approach, Spencer utilizes a new data structure
 
 \section{Introduction}
 
-\textit{Spencer\cite{S97}} focuses on problems for which we known of no work-time efficient parallel algorithms that provide a solution. That is, there are no known parallel algorithms that are able to solve any of the following problems within a logarithmic factor of the fastest sequential algorithm's work, where work is the product of the running time and the processor count. For the following problems, which were presented in \textit{Karp-Ramachandran\cite{KR90}}, \textit{Spencer\cite{S97}} develops parallel algorithms with a better work efficiency than transitive closure based methods: 
+\textit{Spencer\cite{S97}} focuses on problems for which we known of no work-time optimal parallel algorithms. For the following problems, which were presented in \textit{Karp-Ramachandran\cite{KR90}}, \textit{Spencer\cite{S97}} develops parallel algorithms with a better work efficiency than transitive closure based methods: 
 
 \begin{itemize}
 \item Directed Spanning Tree
@@ -97,7 +96,7 @@ Rather than using a matrix based approach, Spencer utilizes a new data structure
 \item Single Source Shortest Paths with Non-Negative Edges
 \end{itemize}
 
-Spencer's motivation for prioritizing work efficiency over time efficiency stems from the fact that existing parallel transitive closure algorithms for these problems perform significantly worse than their sequential counterparts when run on only a single processor. In an effort to reduce this problem, Spencer's algorithms exhibit a time-work trade-off, that is, the longer they are allowed to run, the less overall work they perform. This phenomenon exists due of the fact that certain speculative computations can be eliminated as time progresses, thus reducing overall work. The first full algorithm which Spencer presents solves topological sort, while the second algorithm solves breadth first search. It was mentioned in passing that the breadth first search algorithm can solve directed spanning trees and the topological sort algorithm can solve cycle detection for directed graphs. Furthermore, Spencer expands upon the breadth first search algorithm  by utilizing it to find strongly connected components and extending his breadth first search methods to support non-negative edge weights so as to solve the single source shortest paths problem.\\ 
+\textit{Spencer's\cite{S97}} motivation for prioritizing work efficiency over time efficiency stems from the fact that existing parallel algorithms for these problems perform significantly worse than their sequential counterparts when run on only a single processor. In an effort to reduce this problem, \textit{Spencer's\cite{S97}} algorithms exhibit a time-work trade-off, that is, the longer they are allowed to run, the less overall work they perform. This phenomenon exists due of the fact that certain speculative computations can be eliminated as time progresses, thus reducing overall work. The first full algorithm which Spencer presents solves topological sort, while the second algorithm solves breadth first search. It was mentioned in passing that the breadth first search algorithm can solve directed spanning trees and the topological sort algorithm can solve cycle detection for directed graphs. Furthermore, Spencer expands upon the breadth first search algorithm  by utilizing it to find strongly connected components and extending his breadth first search methods to support non-negative edge weights so as to solve the single source shortest paths problem.\\ 
 
 %----------------------------------------------------------------------------------------
 %	RESULTS
@@ -108,7 +107,7 @@ Spencer's motivation for prioritizing work efficiency over time efficiency stems
 Let $G = (V,E)$, $m = |E|$, and $n = |V|$. The major contributions of \textit{Spencer\cite{S97}} are as follows:
 
 \begin{itemize}
-\item Algorithms that solves topological sort and breadth first search in $O(\frac{n}{\rho}\log^2{\rho})$ time with $\rho^3$ processors on an EREW PRAM such that $ \sqrt{\frac{m}{n}} \leq \rho \leq n$.
+\item Algorithms that solve topological sort and breadth first search in $O(\frac{n}{\rho}\log^2{\rho})$ time with $\rho^3$ processors on an EREW PRAM such that $ \sqrt{\frac{m}{n}} \leq \rho \leq n$.
 \item A randomized algorithm that solves strongly connected components in a directed graph in $O(\frac{n}{\rho}\log^2{\rho}\log{n})$ expected time and $O(n\rho^2\log^2{p}\log{n})$ expected work such that $ \sqrt{\frac{m}{n}} \leq \rho \leq n$.
 \item An algorithm that solves single source shortest paths in $O(\frac{n}{\rho}\log{n}\log{(L\rho)})$ time and $O(n\rho^2(\log{n} + \log{(L\rho)}\log{\rho}) + m(\log{n} + \log{(L\rho)}))$ work such that $\log{(L\rho)} <= \rho <= n$, where $L$ is the length of the longest edge.
 \end{itemize}
@@ -124,19 +123,19 @@ In solving topological sort, \textit{Spencer\cite{S97}} actually solves the reve
 
 \textit{Definition.} A vertex $v$ is \textit{known} iff the distance from $s$ to $v$ is at most $R_k$, the known radius.\\
 
-In solving breadth first search, \textit{Spencer\cite{S97}} employs a very similar algorithm to \textit{Rotpo} called \textit{pbfs}. Again, there exists a parallel algorithm that can solve breadth first search in $O(\log^2{n})$ time and $O(n^3\log{n})$ work by calculating the transitive closure $G^*$. \textit{pbfs} reduced the work by deleting vertices from $G_u$, the unknown graph consisting of unknown vertices, once it has been known. All the techniques developed for \textit{Rtopo} are applicable to \textit{bpfs}. \\ 
+In solving breadth first search, \textit{Spencer\cite{S97}} employs a very similar algorithm to \textit{Rtopo} called \textit{pbfs}. Again, there exists a parallel algorithm that can solve breadth first search in $O(\log^2{n})$ time and $O(n^3\log{n})$ work by calculating the transitive closure $G^*$. \textit{pbfs} reduced the work by deleting vertices from $G_u$, the unknown graph consisting of unknown vertices, once it has been known. All the techniques developed for \textit{Rtopo} are applicable to \textit{pbfs}. \\ 
 
-\textit{Definition.} A Las Vegas algorithm is a probabilistic algorithm which can detect when it has made a mistake and try again, thereby guaranteeing a correct solution.
+\textit{Definition.} A \textit{Las Vegas algorithm} is a probabilistic algorithm which can detect when it has made a mistake and try again, thereby guaranteeing a correct solution.
 
-\textit{Definition.} A vertex $v$ is \textit{big} iff it reaches more than \textit{$\frac{n}{8}$} vertices, otherwise the vertex is small.\\ 
+\textit{Definition.} A vertex $v$ is \textit{big} iff it reaches more than \textit{$\frac{n}{8}$} vertices, otherwise the vertex is \textit{small}.\\ 
 
-In solving strongly connected components, Spencer again utilizes pbfs. The algorithm utilizes divide and conquer in order to separate subsets of SCC's and subgraphs of nodes which have not yet been placed in a SCC. He first applies a procedure called "split" which removes any fully explored SCC's, where he utilizes uniform randomness to select a node v in one of the subgraphs in order to compute its SCC and then separates the nodes which were reachable from v but not in its SCC by adding these nodes to a new subgraph for further processing. At this point, Spencer's algorithm utilizes the divide and conquer technique by recursively calling itself on each of the induced subgraphs until all of the SCC's have been found. Although this solution is correct with high probability, before termination, Spencer utilizes \textit{Ullman's\cite{UY91}} method of verifying the SCC's and rerunning the algorithm if the the verification fails in order to transform his algorithm into a Las Vegas Algorithm. Since the true running time of the algorithm is probabilistic, Spencer utilizes a distinction between "large" and "small" vertices along with Chebyshev's Inequality to lower bound the probability of success by a constant factor, thereby allowing him to treat the necessary number of repeated runs as a constant and absorbing this factor into the big O. With these bounds in place, the algorithm has an expected $O(\frac{n}{\rho}*log^2(\rho)*log(n))$ running time and $O(n\rho^2\log^2{\rho}\log{n})$ expected work.  \\ 
+In solving strongly connected components, Spencer again utilizes \textit{pbfs}. The algorithm utilizes divide and conquer in order to separate subsets of SCC's and subgraphs of nodes which have not yet been placed in a SCC. He first applies a procedure called "split" which removes any fully explored SCC's, where he utilizes uniform randomness to select a node $v$ in one of the subgraphs in order to compute its SCC and then separates the nodes which were reachable from $v$ but not in its SCC by adding these nodes to a new subgraph for further processing. At this point, Spencer's algorithm utilizes the divide and conquer technique by recursively calling itself on each of the induced subgraphs until all of the SCC's have been found. Although this solution is correct with high probability, before termination, Spencer utilizes \textit{Ullman-Yannakakis\cite{UY91}}'s method of verifying the SCC's and rerunning the algorithm if the the verification fails in order to transform his algorithm into a Las Vegas Algorithm. Since the true running time of the algorithm is probabilistic, Spencer utilizes a distinction between "large" and "small" vertices along with Chebyshev's Inequality to lower bound the probability of success by a constant factor, thereby allowing him to treat the necessary number of repeated runs as a constant and absorbing this factor into the big O. With these bounds in place, the algorithm has an expected $O(\frac{n}{\rho}*log^2(\rho)*log(n))$ running time and $O(n\rho^2\log^2{\rho}\log{n})$ expected work.  \\ 
 
 \textit{Definition.} The \textit{rank} of a vertex $v$ is $log_2(r(v))$.
 
-\textit{Definition.} A textit{frontier} $F(v)$ is \textit{small} iff $|F(v)|\le\rho$.\\ 
+\textit{Definition.} A \textit{frontier} $F(v)$ is \textit{small} iff $|F(v)|\le\rho$.\\ 
 
-In solving Single Source Shortest Paths, Spencer employs a method very similar to pbfs, but adds additional complexity in order to account for the edge weights. The primary modifications involve modifying the nearby list invariants to be more general by increasing the range of edge weights checked before a nearby list is guaranteed to be full, introducing the idea of small nearby and frontier lists, and utilizing a safe radius whose value is determined by both the radius and estimated distance rather than simply doubling the radius each iteration. In order to manage these safe radii effectively, Spencer draws upon \textit{Paul's\cite{P83}} description of efficient operations for 2-3 trees that take $O(logn+logk)$ time, where k is the number of elements to be inserted, deleted, searched for, etc. In addition, since the longest path can now be affected by edge weights, this modification of pbfs can no longer rely upon the longest possible path being bound by $m$ and takes on a factor of L, the length of the longest edge, into multiple steps of the algorithm which ultimately impact the span and work. With these modifications, SSSP runs in  $O(\frac{n}{\rho}\log{n}\log{(L\rho)})$ time and $O(n\rho^2(\log{n} + \log{(L\rho)}\log{\rho}) + m(\log{n} + \log{(L\rho)}))$ work when $\log{(L\rho)} <= \rho <= n$.
+In solving Single Source Shortest Paths, Spencer employs a method very similar to \textit{pbfs}, but adds additional complexity in order to account for the edge weights. The primary modifications revise the nearby list invariants to be more general by increasing the range of edge weights checked before a nearby list is guaranteed to be full, introducing the idea of small nearby and frontier lists, and utilizing a safe radius whose value is determined by both the radius and estimated distance rather than simply doubling the radius each iteration. In order to manage these safe radii effectively, Spencer draws upon \textit{Paul's\cite{P83}} description of efficient operations for 2-3 trees that take $O(logn)$ time, where up to $n$ elements are to be inserted, deleted, searched for, etc. In addition, since the longest path can now be affected by edge weights, this modification of \textit{pbfs} can no longer rely upon the longest possible path being bound by $m$ and takes on a factor of L, the length of the longest edge, into multiple steps of the algorithm which ultimately impact the span and work. With these modifications, \textit{SSSP} runs in  $O(\frac{n}{\rho}\log{n}\log{(L\rho)})$ time and $O(n\rho^2(\log{n} + \log{(L\rho)}\log{\rho}) + m(\log{n} + \log{(L\rho)}))$ work when $\log{(L\rho)} <= \rho <= n$.
 
 %----------------------------------------------------------------------------------------
 %	LITERATURE SURVEY
@@ -146,11 +145,11 @@ In solving Single Source Shortest Paths, Spencer employs a method very similar t
 
 The three most centrally related papers to \textit{Spencer\cite{S97}} are:  \textit{Karp-Ramachandran\cite{KR90}}, \textit{Ullman-Yannakakis\cite{UY91}}, and \textit{Paul\cite{P83}}.
 
-\textit{Karp-Ramachandran\cite{KR90}} is a survey of the accumulated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms. After establishing the fundamentals, the survey explores how the different variants PRAM models handle concurrent reads and write, in addition provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which \textit{Spencer\cite{S97}} makes use of \textit{Karp-Ramachandran\cite{KR90}}, where the survey listed the aforementioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without \textit{Karp-Ramachandran\cite{KR90}}, there would be no \textit{Spencer\cite{S97}}, since his entire paper is stemmed from this part of the survey. There is also the fact that \textit{Spencer\cite{S97}'s Rtopo} algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.
+\textit{Karp-Ramachandran\cite{KR90}} is a survey of the accumulated theory of parallel algorithms up to the 1990s. This survey focused on the PRAM as its main computational model and starts off with an overview of efficient parallel algorithms. After establishing the fundamentals, the survey explores how the different variants of PRAM models handle concurrent reads and write. In addition, it provided a brief introduction to other parallel models different from the PRAM. Finally, the survey discussed the class of problem known as NC, problems that have parallel solutions in polylog time and perform polynomial work.  It is actually here in which \textit{Spencer\cite{S97}} makes use of \textit{Karp-Ramachandran\cite{KR90}}, where the survey listed the aforementioned six graph problems that have no known efficient solution due to the Transitive Closure Bottleneck. We believe that without \textit{Karp-Ramachandran\cite{KR90}}, there would be no \textit{Spencer\cite{S97}}, since his entire paper is stemmed from this part of the survey. There is also the fact that \textit{Spencer's\cite{S97} Rtopo} algorithm depends on an efficient simulation of CREW on EREW to maintain the necessary data structures for its nearby lists.
 
-\textit{Ullman-Yannakakis\cite{UY91}} introduces a high-probability parallel algorithm that finds the transitive closure from a single source in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-2\epsilon})$ processors such that $m \geq n^{2-3\epsilon}$. Their algorithm also finds the transitive closure for all pairs in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-\epsilon})$ processors such that $m \geq n^{2-2\epsilon}$. Both require $0 \leq \epsilon \leq \frac{1}{2}$. The probability that their algorithm fails to find a path is at most $2^{-c\alpha}$, where $\alpha$ is a positive constant and $c$ is some time multiplier. Their algorithm is the first in which time is sub-linear and work is less than $M(n)$. Our main interest in \textit{Ullman-Yannakakis\cite{UY91}} is the fact that they have already established an algorithm exhibiting the time-work trade off that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in \textit{Spencer\cite{S97}}. In addition, their was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in \textit{Spencer\cite{S97}} is it's introduction of nearby lists.
+\textit{Ullman-Yannakakis\cite{UY91}} introduces a high-probability parallel algorithm that finds the transitive closure from a single source in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-2\epsilon})$ processors such that $m \geq n^{2-3\epsilon}$. Their algorithm also finds the transitive closure for all pairs in $\tilde{O}(n^\epsilon)$ time with $\tilde{O}(mn^{1-\epsilon})$ processors such that $m \geq n^{2-2\epsilon}$. Both require $0 \leq \epsilon \leq \frac{1}{2}$. The probability that their algorithm fails to find a path is at most $2^{-c\alpha}$, where $\alpha$ is a positive constant and $c$ is some time multiplier. Their algorithm is the first in which time is sub-linear and work is less than $M(n)$. Our main interest in \textit{Ullman-Yannakakis\cite{UY91}} is the fact that they have already established an algorithm exhibiting the time-work trade off that solves breadth first search. Their algorithm is high-probability, and we were interested in seeing a different approach to the same problem we are facing in \textit{Spencer\cite{S97}}. In addition, their work was extended into the context of single source shortest paths and strongly connected components, highlighting the fact that the true novelty in \textit{Spencer\cite{S97}} is it's introduction of nearby lists.
 
-\textit{Paul\cite{P83}} introduces parallel techniques that search, insert, and delete from 2-3 trees in $O(\log{n} + \log{k})$ time on the EREW, where $n$ is the number of leaves and $k$ is the number of searches, inserts or deletes we want to perform in parallel. He seemed to be the first to design a fast tree algorithm. This results presented by \textit{Paul\cite{P83}} were used by \textit{Spencer\cite{S97}} at several key areas in his algorithms. In particular, \textit{Rtopo} needed a variation of the search algorithm to find all the totally terminal vertices to be deleted and \textit{SSSP} required a parallel extension of 2-3 trees to search, insert, and delete many items in parallel. We decided to unravel some of the details presented in Paul that Spencer decided to abstract away from his paper so that we may have a better understanding of his algorithms.
+\textit{Paul\cite{P83}} introduces parallel techniques that search, insert, and delete from 2-3 trees in $O(\log{n} + \log{k})$ time on the EREW, where $n$ is the number of leaves and $k$ is the number of searches, inserts or deletes we want to perform in parallel. He seemed to be the first to design a fast tree algorithm. This results presented by \textit{Paul\cite{P83}} were used by \textit{Spencer\cite{S97}} at several key areas in his algorithms. In particular, \textit{Rtopo} needed a variation of the search algorithm to find all the totally terminal vertices to be deleted and \textit{SSSP} required a parallel extension of 2-3 trees to search, insert, and delete many items in parallel. \textit{Spencer's\cite{S97}} \textit{SSSP} algorithm relies upon \textit{Paul's\cite{P83}} parallel 2-3 trees in order to reduce the complexity of his solution to a weakly polynomial running time.
 
 
 %----------------------------------------------------------------------------------------
@@ -193,14 +192,14 @@ total work required by all executions of step (1a) is $O(n*\rho*2logn+mlogn+n+lo
 
 \textit{Theorem 6.3.1}: The procedure SSSP described above solves the single source shortest path problem in $O(\frac{n}{\rho{}}*logn*log(\rho{}L))$ time while doing $O(n\rho{}^2(logn+log(\rho{}L)log\rho{})+m(logn+log(\rho{}L)))$ work provided that $log(\rho{}L)\le \rho{}\le n$\\
 
-Afterwards, Matthew Hudson will present \textit{Spencer's\cite{S97}} algorithm for Single Source Shortest Paths and establish Theorem 6.3.1. In order to do so, we will present Lemmas 6.1.1-6.1.3 as well as Lemma 6.2.2. If time permits, we will also discuss \textit{Spencer's\cite{S97}} method for finding eligible vertices, however, the methods involved already appeared in Rtopo and pbfs in more basic forms, so this section is not critical for the presentation.
+Afterwards, Matthew Hudson will present \textit{Spencer's\cite{S97}} algorithm for Single Source Shortest Paths and establish \textit{Theorem 6.3.1}. In order to do so, we will present \textit{Lemmas 6.1.1-6.1.3} as well as \textit{Lemma 6.2.2}. If time permits, we will also discuss \textit{Spencer's\cite{S97}} method for finding eligible vertices, however, the methods involved already appeared in \textit{Rtopo} and \textit{pbfs} in more basic forms, so this section is not critical for the presentation.
 
 %----------------------------------------------------------------------------------------
 %	FURTHER RESEARCH
 %----------------------------------------------------------------------------------------
 
 \section{Further Research Directions}
-\textit{Spencer\cite{S97}} and \textit{Ullman\cite{UY91}} suggested that the existence of deterministic rather than probabilistic parallel algorithms that can solve strongly connected components and single source shortest paths remains an open question. \textit{Karp-Ramachandran\cite{KR90}} gave a list of open problems which Spencer did not approach that we currently do not know how to solve efficiently in parallel and have not been able to categorize into a "Complete" category, which included directed and  undirected depth first search. We believe the real interesting question is whether we can forego transitive closure as a subroutine when dealing with problems involving graphs while maintaining time optimality.
+\textit{Spencer\cite{S97}} and \textit{Ullman-Yannakakis\cite{UY91}} suggested that the existence of deterministic rather than probabilistic parallel algorithms that can solve strongly connected components and single source shortest paths remains an open question. \textit{Karp-Ramachandran\cite{KR90}} gave a list of open problems which Spencer did not approach that we currently do not know how to solve efficiently in parallel and have not been able to categorize into a "Complete" category, which included directed and  undirected depth first search. We believe the real interesting question is whether we can forego transitive closure as a subroutine when dealing with problems involving graphs while maintaining time optimality.
 
 
 
